# cpp-docs

./: .clang-tidy  CMakeLists.txt  G++ Compilation Reference.txt  LICENSE  README.md  Xcode Version Reference
Basic-Template/: CMakeLists.txt
CMakeDemoProject/: CMakeLists.txt  CMakeSettings.json
CMakeDemoProject/CMakeDemoProject/: CMakeDemoProject.cpp  CMakeDemoProject.h  CMakeLists.txt
Library-Consumption-Template/: CMakeLists.txt  main.cpp
data/: ASCII Reference Chart - Long.md  ASCII Reference Chart - Wide.md  ASCII Reference Chart.md  C++ Fundamental Types Reference.md  Microsoft Visual C++ Version Reference.md  Modern Xcode Reference.md  Xcode Version Reference.md
src/: arduino_gcc_version_check.ino  clang_tidy_test.cpp  compiler_version_check.cpp  switch_bench.cpp
